force-app/main/default/objects/CS_GlobalBypassSetting__c/CS_GlobalBypassSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>CS_GlobalBypass Setting</label>
</CustomObject>