force-app/main/default/objects/CS_GlobalBypassSetting__c/fields/BypassFlow__c.field-meta.xml
<CustomField>
    <fullName>BypassFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Flow</label>
    <type>Checkbox</type>
</CustomField>