force-app/main/default/objects/CS_GlobalBypassSetting__c/fields/BypassFlows__c.field-meta.xml
<CustomField>
    <fullName>BypassFlows__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Bypass Flows</label>
    <type>Checkbox</type>
</CustomField>