force-app/main/default/objects/CS_GlobalBypassSetting__c/fields/BypassProcessBuilder__c.field-meta.xml
<CustomField>
    <fullName>BypassProcessBuilder__c</fullName>
    <label>Bypass Process Builder</label>
    <type>TextArea</type>
</CustomField>