force-app/main/default/objects/CS_GlobalBypassSetting__c/fields/BypassTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassTrigger__c</fullName>
    <label>Bypass Trigger</label>
    <type>TextArea</type>
</CustomField>