force-app/main/default/objects/CS_GlobalBypassSetting__c/fields/BypassValidationRules__c.field-meta.xml
<CustomField>
    <fullName>BypassValidationRules__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Bypass Validation Rules</label>
    <type>Checkbox</type>
</CustomField>