force-app/main/default/objects/CS_GlobalBypassSetting__c/fields/BypassWorkflows__c.field-meta.xml
<CustomField>
    <fullName>BypassWorkflows__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Bypass Workflows</label>
    <type>Checkbox</type>
</CustomField>